--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,8 @@ body {
     padding-top: 100px;
     text-align: center;
     background-color: rgb(255, 255, 155);
+    background-image: linear-gradient(to right,rgb(255, 255, 155), rgb(134, 221, 255))
+    ;
     & h1 {
         padding-top: 25px;
         font-family:Verdana, Geneva, Tahoma, sans-serif;
@@ -32,5 +34,6 @@ body {
         font-family:Verdana, Geneva, Tahoma, sans-serif;
         font-size: large;
         color: rgb(24, 192, 88);
+        margin: 50px;
     }
 }
