--- a/pages/header-gallery/assets/css/style.css
+++ b/pages/header-gallery/assets/css/style.css
@@ -8,6 +8,11 @@ header.d-one * {
     outline: 1px blue dashed;
 }
 
+header.d-two,
+header.d-two * {
+    outline: 1px rgb(229, 255, 0) dashed;
+}
+
 body {
     & h1, h2, a{
         text-align: center;
@@ -21,7 +26,7 @@ section.h-design-one{
 header.d-one {
     display:flex;
     justify-content: space-between;
-    padding: 0rem 5vw 0;
+    padding: .8rem 5vw;
     align-items: center;
     margin: 0px;
     background-color: rgb(255, 255, 255);
@@ -43,4 +48,25 @@ section.h-design-two{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-head
+header.d-two {
+    display:flex;
+    padding: .8rem 5vw;
+    align-items: center;
+    margin: 0px;
+    background-color: black;
+    & img{
+        width: 7.5%;
+        height: 7.5%;
+    }
+    & a{
+        font-family: Arial, Helvetica, sans-serif;
+        color: rgb(148, 0, 0);
+        font-size: 30px;
+        text-decoration: underline;
+        font-weight: bolder;
+        padding-left: 10px;
+        padding-right: 10px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+}
