--- a/pages/header-gallery/assets/css/style.css
+++ b/pages/header-gallery/assets/css/style.css
@@ -70,3 +70,39 @@ header.d-s-two {
         margin-right: 20px;
     }
 }
+
+section.h-s-design-two{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+header.d-s-three {
+    display:flex;
+    align-items: center;
+    background-color: rgb(255, 81, 0);
+}
+
+header.d-s-three .image{
+    padding-left: 50px;
+    & img {
+        width: 10%;
+        height: 10%;
+    }
+}
+
+header.d-s-three .buttons{
+    & img {
+        width: 5%;
+        height: 5%;
+    }
+    & a{
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: rgb(255, 255, 255);
+        font-size: 30px;
+        text-decoration: underline;
+        font-weight: bolder;
+        padding-left: 20px;
+        padding-right: 20px;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+}
