--- a/pages/header-gallery/assets/css/style.css
+++ b/pages/header-gallery/assets/css/style.css
@@ -13,6 +13,11 @@ header.d-s-two * {
     outline: 1px rgb(229, 255, 0) dashed;
 }
 
+header.d-s-three,
+header.d-s-three * {
+    outline: 1px rgb(9, 255, 0) dashed;
+}
+
 body {
     & h1, h2, a{
         text-align: center;
@@ -71,7 +76,7 @@ header.d-s-two {
     }
 }
 
-section.h-s-design-two{
+section.h-s-design-three{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
@@ -79,20 +84,29 @@ header.d-s-three {
     display:flex;
     align-items: center;
     background-color: rgb(255, 81, 0);
+    gap: 30rem;
 }
 
 header.d-s-three .image{
-    padding-left: 50px;
+    display:flex;
+    justify-content: space-between;
+    margin-left: 50px;
     & img {
-        width: 10%;
-        height: 10%;
+        width: 12.5%;
+        height: 12.5%;
     }
 }
 
 header.d-s-three .buttons{
+    display: flex;
+    align-items: center;
+    justify-content: end;
     & img {
         width: 5%;
         height: 5%;
+        border: 3px solid black;
+        border-radius: 50%;
+        margin-left: 25px;
     }
     & a{
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -102,7 +116,5 @@ header.d-s-three .buttons{
         font-weight: bolder;
         padding-left: 20px;
         padding-right: 20px;
-        margin-left: 20px;
-        margin-right: 20px;
     }
 }
