--- a/pages/header-gallery/assets/css/style.css
+++ b/pages/header-gallery/assets/css/style.css
@@ -60,8 +60,8 @@ header.d-s-two {
     justify-content: end;
     background-color: black;
     & img{
-        width: 7.5%;
-        height: 7.5%;
+        width: 5%;
+        height: 5%;
     }
     & a{
         font-family: Arial, Helvetica, sans-serif;
@@ -112,7 +112,7 @@ header.d-s-three .buttons{
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         color: rgb(255, 255, 255);
         font-size: 30px;
-        text-decoration: underline;
+        text-decoration: underline , overline;
         font-weight: bolder;
         padding-left: 20px;
         padding-right: 20px;
