--- a/pages/header-gallery/assets/css/style.css
+++ b/pages/header-gallery/assets/css/style.css
@@ -190,3 +190,37 @@ header.d-a-one{
         }
     }
 }
+
+section.h-a-design-two{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+header.d-a-two {
+    display:flex;
+    align-items: center;
+    justify-content: start;
+    background-color: black;
+    transition: 2s;
+    &:hover{
+        background-color: rgb(230, 39, 255);
+    }
+    & img{
+        width: 5%;
+        height: 5%;
+    }
+    & a{
+        font-family: Arial, Helvetica, sans-serif;
+        color: rgb(148, 0, 0);
+        font-size: 30px;
+        text-decoration: underline;
+        font-weight: bolder;
+        padding-left: 20px;
+        padding-right: 20px;
+        margin-left: 20px;
+        margin-right: 20px;
+        transition: .5s;
+        &:hover {
+            color: red;
+        }
+    }
+}
