--- a/pages/header-gallery/assets/css/style.css
+++ b/pages/header-gallery/assets/css/style.css
@@ -30,7 +30,11 @@ header.d-s-five * {
 
 
 body {
-    & h1, h2, a{
+    & h1, h2{
+        text-align: center;
+    }
+    & a{
+        font-size: 25px;
         text-align: center;
     }
 }
@@ -96,6 +100,7 @@ header.d-s-three {
     align-items: center;
     background-color: rgb(255, 81, 0);
     gap: 30rem;
+    border: black solid, 3px;
 }
 
 header.d-s-three .image{
@@ -113,8 +118,10 @@ header.d-s-three .buttons{
     align-items: center;
     justify-content: end;
     & img {
-        width: 10%;
-        height: 10%;
+        display: flex;
+        align-items: center;
+        width: 30%;
+        height: 30%;
         border: 3px solid black;
         border-radius: 50%;
         margin-left: 25px;
@@ -223,4 +230,74 @@ header.d-a-two {
             color: red;
         }
     }
+}
+
+section.h-a-design-three{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+header.d-a-three {
+    display:flex;
+    align-items: center;
+    background-color: rgb(255, 81, 0);
+    gap: 30rem;
+    border: black solid, 3px;
+}
+
+header.d-a-three .image{
+    display:flex;
+    justify-content: space-between;
+    margin-left: 50px;
+    position: relative;
+}
+
+header.d-a-three .image img.animated-logo-three {
+    width: 50px;
+    height: 50px;
+    transition: 0s;
+}
+
+header.d-a-three .image img.animated-logo-three-hover{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50px;
+    height: 50px;
+    display: none;
+}
+
+header.d-a-three .image:hover img.animated-logo-three {;
+    visibility: hidden;
+}
+
+header.d-a-three .image:hover img.animated-logo-three-hover {
+    display: block;
+}
+
+header.d-a-three .buttons{
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    & img {
+        display: flex;
+        align-items: center;
+        width: 30%;
+        height: 30%;
+        border: 3px solid black;
+        border-radius: 50%;
+        margin-left: 25px;
+    }
+    & a{
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: rgb(255, 255, 255);
+        font-size: 20px;
+        text-decoration: underline , overline;
+        font-weight: bolder;
+        padding-left: 20px;
+        padding-right: 20px;
+        transition: .5s;
+    }
+        &:hover{
+            transform: scale(2);
+        }
 }
