--- a/pages/header-gallery/assets/css/style.css
+++ b/pages/header-gallery/assets/css/style.css
@@ -96,35 +96,19 @@ section.h-s-design-three{
 }
 
 header.d-s-three {
-    display:flex;
-    align-items: center;
     background-color: rgb(255, 81, 0);
-    gap: 30rem;
     border: black solid, 3px;
 }
 
-header.d-s-three .image{
-    display:flex;
-    justify-content: space-between;
-    margin-left: 50px;
-    & img {
-        width: 12.5%;
-        height: 12.5%;
-    }
-}
-
-header.d-s-three .buttons{
+header.d-s-three .items {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: end;
-    & img {
-        display: flex;
-        align-items: center;
-        width: 30%;
-        height: 30%;
-        border: 3px solid black;
-        border-radius: 50%;
-        margin-left: 25px;
+    & img{
+        width: 60px;
+        height: 60px;
+        margin-left: 50px;
+        margin-right: 50px;
     }
     & a{
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -132,8 +116,6 @@ header.d-s-three .buttons{
         font-size: 20px;
         text-decoration: underline , overline;
         font-weight: bolder;
-        padding-left: 20px;
-        padding-right: 20px;
     }
 }
 
@@ -146,6 +128,8 @@ header.d-s-four{
     align-items: flex-end;
     justify-content: center;
     background-color: blanchedalmond;
+    margin-left: 25px;
+    margin-right: 25px;
 }
 
 section.h-s-design-five{
@@ -153,17 +137,14 @@ section.h-s-design-five{
 }
 
 header.d-s-five{
-    display: flex;
-    justify-content: space-between;
     background-color: black;
     border: 10px solid rgb(0, 102, 255);
 }
 
-header.d-s-five .logo-image{
+header.d-s-five .symbols{
+    display: flex;
+    justify-content: space-between;
     margin-left: 25px;
-}
-
-header.d-s-five .menu-image{
     margin-right: 25px;
 }
 
@@ -245,55 +226,20 @@ section.h-a-design-three{
 }
 
 header.d-a-three {
-    display:flex;
-    align-items: center;
     background-color: rgb(255, 81, 0);
-    gap: 30rem;
     border: black solid, 3px;
 }
 
-header.d-a-three .image{
-    display:flex;
-    justify-content: space-between;
-    margin-left: 50px;
+header.d-a-three .items {
     position: relative;
-}
-
-header.d-a-three .image img.animated-logo-three {
-    width: 50px;
-    height: 50px;
-    transition: 0s;
-}
-
-header.d-a-three .image img.animated-logo-three-hover{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50px;
-    height: 50px;
-    display: none;
-}
-
-header.d-a-three .image:hover img.animated-logo-three {
-    visibility: hidden;
-}
-
-header.d-a-three .image:hover img.animated-logo-three-hover {
-    display: block;
-}
-
-header.d-a-three .buttons{
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: end;
-    & img {
-        display: flex;
-        align-items: center;
-        width: 30%;
-        height: 30%;
-        border: 3px solid black;
-        border-radius: 50%;
-        margin-left: 25px;
+    & img{
+        width: 60px;
+        height: 60px;
+        margin-left: 50px;
+        margin-right: 50px;
     }
     & a{
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -301,13 +247,31 @@ header.d-a-three .buttons{
         font-size: 20px;
         text-decoration: underline , overline;
         font-weight: bolder;
-        padding-left: 20px;
-        padding-right: 20px;
         transition: .5s;
         &:hover{
             transform: scale(2);
         }
     }
+}
+
+header.d-a-three .items img.logo{
+    transition: 0s;
+}
+
+header.d-a-three .items img.animated-logo{
+    position: absolute;
+    align-items: center;
+    top: 0;
+    left: 0;
+    display: none;
+}
+
+header.d-a-three .items:hover img.logo{
+    visibility: hidden;
+}
+
+header.d-a-three .items:hover img.animated-logo{
+    display: block;
 }
 
 section.h-a-design-four{
@@ -354,4 +318,31 @@ header.d-a-four{
             filter: drop-shadow(0 0 10px violet);
         }
     }
+}
+
+section.h-a-design-five{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+header.d-a-five{
+    background-color: black;
+    border: 10px solid rgb(0, 102, 255);
+    transition: 2s;
+    &:hover{
+        background-color: rgb(0, 102, 255);
+        border: 10px solid rgb(255, 0, 34);
+
+    }
+    & p {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 60px;
+        transition: .5s;
+    }
+}
+
+header.d-a-five .symbols{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 25px;
+    margin-right: 25px;
 }
