--- a/pages/header-gallery/assets/css/style.css
+++ b/pages/header-gallery/assets/css/style.css
@@ -196,9 +196,9 @@ header.d-a-two {
     align-items: center;
     justify-content: start;
     background-color: black;
-    transition: 2s;
+    transition: 1s;
     &:hover{
-        background-color: rgb(230, 39, 255);
+        background-color: rgb(176, 39, 255);
     }
     & img{
         width: 5%;
@@ -260,7 +260,6 @@ header.d-a-three .items img.logo{
 
 header.d-a-three .items img.animated-logo{
     position: absolute;
-    align-items: center;
     top: 0;
     left: 0;
     display: none;
@@ -327,16 +326,42 @@ section.h-a-design-five{
 header.d-a-five{
     background-color: black;
     border: 10px solid rgb(0, 102, 255);
-    transition: 2s;
+    transition: 1s;
     &:hover{
         background-color: rgb(0, 102, 255);
         border: 10px solid rgb(255, 0, 34);
 
     }
     & p {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 60px;
+        font-weight: bolder;
         transition: .5s;
+        color: transparent;
+        &:hover{
+            color: purple;
+            background: rgb(33, 175, 14);
+            translate: 0 -20px;
+            box-shadow: 0px 25px 0px 0px rgb(107, 98, 43);
+        }
+    }
+    & a{
+        text-decoration: none;
+    }
+    & img.logo-image {
+        transition: .5s;
+        &:hover{
+            transform: rotateZ(360deg);
+        }
+    }
+    & img.menu-image {
+        transition: .5s;
+        &:hover{
+            transform: rotateX(360deg);
+        }
     }
 }
 
