--- a/pages/header-gallery/assets/css/style.css
+++ b/pages/header-gallery/assets/css/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
 }
-
+/*
 header.d-s-one,
 header.d-s-one * {
     outline: 1px blue dashed;
@@ -27,7 +27,7 @@ header.d-s-five,
 header.d-s-five * {
     outline: 1px rgb(212, 0, 255) dashed;
 }
-
+*/
 
 body {
     & h1, h2{
