--- a/pages/footer-gallery/assets/css/style.css
+++ b/pages/footer-gallery/assets/css/style.css
@@ -44,7 +44,7 @@ footer.d-s-one .cpr{
 footer.d-s-two{
     padding-top: 10px;
     padding-bottom: 10px;
-    background-color: black;
+    background-color: rgb(12, 8, 51);
     border: 5px solid rgb(160, 160, 160);
     & p{
         text-align: center;
@@ -77,7 +77,8 @@ footer.d-s-two .separation .right {
 footer.d-s-three{
     padding-top: 10px;
     padding-bottom: 10px;
-    background-color: white;
+    background-color: rgb(255, 155, 155);
+    background-image: linear-gradient( rgb(255, 155, 155), rgb(255, 255, 123) );
     border: 5px solid;
 }
 
@@ -94,5 +95,53 @@ footer.d-s-three .scmi{
         width: 50px;
         margin-left: 10px;
         margin-right: 10px;
+    }
+}
+
+footer.d-s-four {
+    background-image: url(../img/footer-background-four.jpg);
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    & p{
+        color: white;
+    }
+}
+
+footer.d-s-four .sections{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+footer.d-s-four .sections .section-one{
+    margin-left: 25px;
+    margin-right: 25px;
+    & h4{
+        font-family: 'Courier New', Courier, monospace;
+        color: red;
+    }
+    & a{
+        color: rgb(148, 95, 95);
+    }
+}
+
+footer.d-s-four .sections .section-two{
+    margin-left: 25px;
+    margin-right: 25px;
+    & h4{
+        font-family: 'Courier New', Courier, monospace;
+        color: red;
+    }
+    & a{
+        color: rgb(148, 95, 95);
+    }
+}
+
+footer.d-s-four .sections .section-three{
+    margin-left: 25px;
+    margin-right: 25px;
+    & img{
+        width: 50%;
+        height: 50%;
     }
 }
