--- a/pages/footer-gallery/assets/css/style.css
+++ b/pages/footer-gallery/assets/css/style.css
@@ -8,6 +8,26 @@ footer.d-s-one * {
     outline: 1px blue dashed;
 }
 
+footer.d-s-two,
+footer.d-s-two * {
+    outline: 1px red dashed;
+}
+
+footer.d-s-three,
+footer.d-s-three * {
+    outline: 1px yellow dashed;
+}
+
+footer.d-s-four,
+footer.d-s-four * {
+    outline: 1px purple dashed;
+}
+
+footer.d-s-five,
+footer.d-s-five * {
+    outline: 1px black dashed;
+}
+
 section.f-s-design{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -61,8 +81,8 @@ footer.d-s-two .separation{
 footer.d-s-two .separation .left {
     padding-left: 100px;
     & img{
-        width: 200px;
-        height: 200px;
+        width: 100px;
+        height: 100px;
         filter: drop-shadow(0 0 10px white);
     }
 }
@@ -143,5 +163,49 @@ footer.d-s-four .sections .section-three{
     & img{
         width: 50%;
         height: 50%;
+    }
+}
+
+footer.d-s-five{
+    background-color: rgb(180, 231, 255);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    & p{
+        color: rgb(150, 150, 150);
+    }
+}
+
+footer.d-s-five .sections{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+footer.d-s-five .sections .section-one{
+    & img {
+        margin-left: 25px;
+        margin-right: 25px;
+        width: 50px;
+        height: 50px;
+    }
+}
+
+footer.d-s-five .sections .section-two{
+    & p {
+        color: rgb(150, 150, 150);
+        text-decoration: underline;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-weight: bold;
+    }
+}
+
+footer.d-s-five .sections .section-three{
+    & img {
+        margin-left: 25px;
+        margin-right: 25px;
+        width: 50px;
+        height: 50px;
     }
 }
