--- a/pages/footer-gallery/assets/css/style.css
+++ b/pages/footer-gallery/assets/css/style.css
@@ -50,7 +50,14 @@ footer.d-s-one{
         font-weight: bold;
     }
 }
-footer.d-s-one .column{
+
+footer.d-s-one .diver{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;    
+}
+
+footer.d-s-one .diver .column{
     margin-top: 10px;
     margin-left: 100px;
     margin-right: 100px;
@@ -62,10 +69,7 @@ footer.d-s-one .column{
     }
 }
 
-footer.d-s-one .cpr{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+footer.d-s-one .diver .cpr{
     & p {
         font-size: large;
     }
@@ -168,6 +172,188 @@ footer.d-s-four .sections .section-two{
 }
 
 footer.d-s-four .sections .section-three{
+    margin-left: 25px;
+    margin-right: 25px;
+    & img{
+        width: 50%;
+        height: 50%;
+    }
+}
+
+footer.d-s-five{
+    background-color: rgb(180, 231, 255);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    & p{
+        color: rgb(150, 150, 150);
+    }
+}
+
+footer.d-s-five .sections{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+footer.d-s-five .sections .section-one{
+    & img {
+        margin-left: 25px;
+        margin-right: 25px;
+        width: 50px;
+        height: 50px;
+    }
+}
+
+footer.d-s-five .sections .section-two{
+    & p {
+        color: rgb(150, 150, 150);
+        text-decoration: underline;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-weight: bold;
+    }
+}
+
+footer.d-s-five .sections .section-three{
+    & img {
+        margin-left: 25px;
+        margin-right: 25px;
+        width: 50px;
+        height: 50px;
+    }
+}
+
+footer.d-a-one{
+    background-color: aqua;
+    border: 5px solid;
+    & p{
+        text-align: center;
+        font-weight: bold;
+    }
+}
+
+footer.d-a-one .diver{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;    
+}
+
+footer.d-a-one .diver .column{
+    margin-top: 10px;
+    margin-left: 100px;
+    margin-right: 100px;
+    border: 3px solid;
+    background-color: brown;
+    & h4, p{
+        text-align: center;
+        color: white;
+    }
+}
+
+footer.d-a-one .diver .cpr{
+    & p {
+        font-size: large;
+    }
+}
+
+footer.d-a-two{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: rgb(12, 8, 51);
+    border: 5px solid rgb(160, 160, 160);
+    & p{
+        text-align: center;
+        color: white;
+    }
+}
+
+footer.d-a-two .separation{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer.d-a-two .separation .left {
+    padding-left: 100px;
+    & img{
+        width: 100px;
+        height: 100px;
+        filter: drop-shadow(0 0 10px white);
+    }
+}
+
+footer.d-a-two .separation .right {
+    padding-right: 100px;
+    & h4, p{
+        color: white;
+    }
+}
+
+footer.d-a-three{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: rgb(255, 155, 155);
+    background-image: linear-gradient( rgb(255, 155, 155), rgb(255, 255, 123) );
+    border: 5px solid;
+}
+
+footer.d-a-three .dscrpt{
+    margin-right: 25px;
+    margin-left: 25px;
+}
+
+footer.d-a-three .scmi{
+    display:flex;
+    justify-content: center;
+    & img{
+        height: 50px;
+        width: 50px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+}
+
+footer.d-a-four {
+    background-image: url(../img/footer-background-four.jpg);
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    & p{
+        color: white;
+    }
+}
+
+footer.d-a-four .sections{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+footer.d-a-four .sections .section-one{
+    margin-left: 25px;
+    margin-right: 25px;
+    & h4{
+        font-family: 'Courier New', Courier, monospace;
+        color: red;
+    }
+    & a{
+        color: rgb(148, 95, 95);
+    }
+}
+
+footer.d-a-four .sections .section-two{
+    margin-left: 25px;
+    margin-right: 25px;
+    & h4{
+        font-family: 'Courier New', Courier, monospace;
+        color: red;
+    }
+    & a{
+        color: rgb(148, 95, 95);
+    }
+}
+
+footer.d-a-four .sections .section-three{
     margin-left: 25px;
     margin-right: 25px;
     & img{
